[package]
name = "skk"
description = "An implementation of Simple Kana to Kanji conversion program"
license = "MIT"
repository = "https://github.com/skk-rs/skk-rs/"
readme = "README.md"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
